fixed color contrast issues

--- a/chamber/styles/discover-small.css
+++ b/chamber/styles/discover-small.css
@@ -110,7 +110,6 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.6);
 
   display: flex;
   justify-content: center;
@@ -142,5 +141,5 @@ button {
   cursor: pointer;
 }
 .modal-content button:hover{
-  background-color: var(--background-color);
+  background-color: white;
 }
